added to project pages. Need to fix buttons and columns

--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ max-width:100%;
 
 }
 
-#selfie {
+#selfie-project-photos {
     object-fit: cover;
     border: solid 2px black; 
     width: 50%;
